--- a/.github/workflows/main_githubdotnetwebappservice.yml
+++ b/.github/workflows/main_githubdotnetwebappservice.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Setup NuGet
         uses: NuGet/setup-nuget@v1.0.5
 
-      - name: Restore NuGet packages
-        run: nuget restore
+      - name: restore-nuget-packages
+        run: IT-Service/restore-nuget-packages@v1.0.1
 
       - name: Publish to folder
         run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
