--- a/.github/workflows/main_githubdotnetwebappservice.yml
+++ b/.github/workflows/main_githubdotnetwebappservice.yml
@@ -23,7 +23,7 @@ jobs:
         uses: NuGet/setup-nuget@v1.0.5
 
       - name: restore-nuget-packages
-        run: IT-Service/restore-nuget-packages@v1.0.1
+        run: restore-nuget-packages@v1.0.1
 
       - name: Publish to folder
         run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
